# az-reporter

./: .gitignore  README.md  main.py  pyproject.toml  report.csv
az_reporter/: __init__.py  arg_client.py  auth.py  cli.py  models.py  report.py
